# slide-gen

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: app.py
app/templates/: gallery.html  index.html
slide_gen/: __init__.py  main.py
