[tool.poetry]
name = "slide-gen"
version = "0.1.0"
description = ""
authors = ["Alex Jercan <jercan_alex27@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
slide-gpt = "^0.2.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
